-Add: Convert sample rate and sample size, downmix and apply effects (normalize, bass and treble) using sox
-Add: Copy embedded covers for ogg files using METADATA_BLOCK_PICTURE
-Add: Option to switch between COMMENT and DESCRIPTION as comment fields for ogg vorbis and flac files
-Add: Compression level option to the lame plugin
-Add: Opus support (via opus-tools)
-Change: Remember dimensions of the sub-windows and dialogs
-Change: Sampling rate and number of channels can as of now only be changed through a filter plugin (currently only sox)
-Change: Immediately start converting a file after adding it to the file list if the conversion is running in queue mode
-Change: Quit soundKonverter when canceling the CD ripper dialog if soundKonverter was started with the --rip option
-Change: Quit the Replay Gain tool when it gets closed
-Fix: Handle internal Replay Gain calculation properly
-Fix: Drop directories onto the Replay Gain tool window
-Fix: Don't accept dropping tracks onto albums with different codec or sampling rate in the Replay Gain tool
-Fix: Better file type recognition
-Fix: Output options control via command line parameters when ripping audio cds
-Fix: User defined parameters for mpcenc when using a preset

1.6.4:
-Fix: Stall when Replay Gain plugin returns error code (e.g. when trying to remove musepack gain)
-Fix: Some memory leaks
-Fix: Performance improvements when adding large directories

1.6.3:
-Add: Brazilian Portuguese translation (by André Marcelo Alvarenga)
-Fix: Make sure the file chooser dialog won't get overlayed by the options dialog in non-KDE environments

1.6.2:
-Fix: Skip files that ought to be skipped instead of generating a new file name
-Fix: Make saving custom profiles work again
-Fix: Don't mix up the output directory history for metadata and normal mode
-Fix: Show proper progress when applying album gain

1.6.1:
-Fix: Don't try to restore the file list when calling soundKonverter while it is running

1.6.0: